# cjm-fasthtml-job-monitor

./: README.md  demo_app.py  html_ids.html  html_ids.html.md  index.html  index.html.md  models.html  models.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_fasthtml_job_monitor/: _modidx.py  html_ids.py  models.py
cjm_fasthtml_job_monitor/components/: modal.py  overlay.py  trigger.py
cjm_fasthtml_job_monitor/components/tabs/: logs_tab.py  progress_tab.py  resources_tab.py
cjm_fasthtml_job_monitor/routes/: init.py
cjm_fasthtml_job_monitor/services/: monitor.py
components/: modal.html  modal.html.md  overlay.html  overlay.html.md  trigger.html  trigger.html.md
components/tabs/: logs_tab.html  logs_tab.html.md  progress_tab.html  progress_tab.html.md  resources_tab.html  resources_tab.html.md
nbs/: html_ids.ipynb  index.ipynb  models.ipynb  nbdev.yml
nbs/components/: modal.ipynb  overlay.ipynb  trigger.ipynb
nbs/components/tabs/: logs_tab.ipynb  progress_tab.ipynb  resources_tab.ipynb
nbs/routes/: init.ipynb
nbs/services/: monitor.ipynb
routes/: init.html  init.html.md
services/: monitor.html  monitor.html.md
