[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-job-monitor"
dynamic = ["version"]
description = "A FastHTML component library for monitoring plugin job execution with progress tracking, log tailing, resource usage, and cancellation via a tabbed modal with content overlay."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm-plugin-system', 'cjm_fasthtml_interactions', 'cjm-workflow-state', 'cjm-fasthtml-keyboard-navigation>=0.0.20', 'cjm-fasthtml-daisyui', 'cjm-fasthtml-app-core>=0.0.17', 'cjm-fasthtml-tailwind>=0.0.44', 'cjm-fasthtml-lucide-icons', 'cjm_fasthtml_design_system>=0.0.7']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-job-monitor"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-job-monitor"

[project.entry-points.nbdev]
cjm_fasthtml_job_monitor = "cjm_fasthtml_job_monitor._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_job_monitor.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_job_monitor*"]

[tool.nbdev]
