[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-job-monitor"
dynamic = ["version"]
description = "A FastHTML component library for monitoring plugin job execution with progress tracking, log tailing, resource usage, and cancellation via a tabbed modal with content overlay."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm-plugin-system>=0.0.30', 'cjm_fasthtml_interactions>=0.0.38', 'cjm-workflow-state>=0.0.3', 'cjm-fasthtml-keyboard-navigation>=0.0.27', 'cjm-fasthtml-daisyui>=0.0.15', 'cjm-fasthtml-app-core>=0.0.21', 'cjm-fasthtml-tailwind>=0.0.44', 'cjm-fasthtml-lucide-icons>=0.0.1', 'cjm_fasthtml_design_system>=0.0.13']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-job-monitor"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-job-monitor"

[project.entry-points.nbdev]
cjm_fasthtml_job_monitor = "cjm_fasthtml_job_monitor._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_job_monitor.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_job_monitor*"]

[tool.nbdev]
